# dex-offender

./: .env  .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  ctfs.json  flake.nix  foundry.toml  remappings.txt  rustfmt.toml  state.json
attack/: Cargo.toml
attack/contracts/ethernaut/: AlienCodexExploit.sol  CoinFlipExploit.sol  DenialExploit.sol  Donatexploit.sol  ElevatorExploit.sol  Example.sol  ForceExploit.sol  GatekeeperOneExploit.sol  GatekeeperTwoExploit.sol  Gatexploit.sol  GatexploitTwo.sol  KingExploit.sol  MagicNumExploit.sol  MagicNumberExploit.sol  NaughtCoinExploit.sol  PreservationExploit.sol  RecoveryExploit.sol  ReentrancyExploit.sol  ShopExploit.sol  TelephoneExploit.sol
attack/src/: lib.rs
attack/src/abi/: alien_codex.rs  building.rs  building_contract.rs  cheaper.rs  coin_flip.rs  coin_flip_exploit.rs  context.rs  denial.rs  donatexploit.rs  elevator.rs  elevator_exploit.rs  erc20.rs  example.rs  find_token.rs  force.rs  force_exploit.rs  gatekeeper_one.rs  gatekeeper_one_clone.rs  gatekeeper_two.rs  gatexploit.rs  gatexploit_two.rs  hack_coin_flip.rs  human_is_stronger.rs  i_am_true_library_contract_please_believe_me.rs  i_preservation.rs  ierc20.rs  ierc20_metadata.rs  infinite_calculation.rs  king.rs  king_exploit.rs  king_hack.rs  let_me_in.rs  let_me_in_again.rs  library_contract.rs  magic_num.rs  magic_num_exploit.rs  mod.rs  money_giver.rs  n.rs  naught_coin.rs  (+12 more)
attack/src/damn_vulnerable_defi/: lvl1_unstoppable.rs  mod.rs
attack/src/ethernaut/: hack01_fallback.rs  hack02_fallout.rs  hack03_coin_flip.rs  hack04_telephone.rs  hack05_token.rs  hack06_delegate.rs  hack07_force.rs  hack08_vault.rs  hack09_king.rs  hack10_reentrancy.rs  hack11_elevator.rs  hack12_privacy.rs  hack13_gatekeeperOne.rs  hack13_gatekeeper_one.rs  hack14_gatekeeper_two.rs  hack15_naught_coin.rs  hack16_preservation.rs  hack17_recovery.rs  hack18_magic_number.rs  hack19_alien_codex.rs  hack20_denial.rs  hack21_shop.rs  hack22_dex.rs  hack23_dex_two.rs  mod.rs  template_hack.rs
attack/test/: Gatexploit.t.sol
attack/test/ethernaut/: Example.t.sol  Gatexploit.t.sol  GatexploitTwo.t.sol
ctf/: Cargo.toml  foundry.toml  remappings.txt
ctf/contracts/: DexOffender.sol
ctf/contracts/damn-vulnerable-defi/: DamnValuableNFT.sol
ctf/src/: level.rs  lib.rs  roles.rs
ctf/src/abi/: access_control.rs  access_control_enumerable.rs  accounting_token.rs  address.rs  address_upgradeable.rs  alien_codex.rs  arrays.rs  authorized_executor.rs  authorizer_upgradeable.rs  buyer.rs  climber_constants.rs  climber_errors.rs  climber_timelock.rs  climber_timelock_base.rs  climber_vault.rs  coin.rs  coin_flip.rs  context_upgradeable.rs  counters.rs  crypto_vault.rs  damn_valuable_nft.rs  damn_valuable_token.rs  damn_valuable_token_snapshot.rs  delegate.rs  delegate_erc20.rs  delegation.rs  denial.rs  dex.rs  dex_two.rs  double_entry_point.rs  double_entry_point_check.rs  elevator.rs  engine.rs  enum_.rs  enumerable_set.rs  erc165.rs  erc1967_upgrade_upgradeable.rs  erc20.rs  erc20_snapshot.rs  erc4626.rs  (+130 more)
ctf/src/damn_vulnerable_defi/: lvl1_unstoppable.rs  mod.rs
ctf/src/ethernaut/: lvl01_fallback.rs  lvl02_fallout.rs  lvl03_coin_flip.rs  lvl04_telephone.rs  lvl05_token.rs  lvl06_delegate.rs  lvl07_force.rs  lvl08_vault.rs  lvl09_king.rs  lvl10_reentrancy.rs  lvl11_elevator.rs  lvl12_privacy.rs  lvl13_gatekeeper_two.rs  lvl1_fallback.rs  (+21 more)
(+271 files in other folders)
