[workspace]
resolver = "2"
members = ["attack", "ctf"]

[workspace.package]
edition = "2021"
exclude = [".github/", "**/tests/", "**/contracts/", "**/cache/", "**/out/"]

[workspace.dependencies]
eyre = "0.6"
ethers = "2.0.8"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.99"
async-trait = "0.1.68"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "time"] }
