[package]
name = "ctf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.99"
async-trait = "0.1.68"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "time"] }
ethers = { version = "2", default-features = false, features = ["rustls"] }
